--- a/todos/login/login.html
+++ b/todos/login/login.html
@@ -3,6 +3,6 @@
     <form action="" class="login">
       <p>Email: <input type="email" name="email" required="true"></p>
       <p>Password: <input type="password" name="password" required="true"></p>
-      <button type="submit">Login</button>
+      <button class="waves-effect waves-light btn" type="submit">Login</button>
     </form>
 </template>
