--- a/todos/register/register.html
+++ b/todos/register/register.html
@@ -3,6 +3,6 @@
     <form action="" class="register">
       <p>Email: <input type="email" name="email"></p>
       <p>Password: <input type="password" name="password"></p>
-      <button type="submit">Register</button>
+      <button class="waves-effect waves-light btn" type="submit">Register</button>
     </form>
 </template>
